# fraud-detection-neurips

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  request_example.py
fraud_detection/: api.py
notebooks/: 0.0-mfv-exploratory-data-analysis.ipynb  0.1-mfv-pre-processing.ipynb  0.2-mfv-statistical-tests.ipynb  1.0-mfv-model-training.ipynb
