[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fraud_detection"
version = "0.0.1"
description = "Detecting fraudulent transactions with a big data dataset"
authors = [
  { name = "matheusfvesco" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "fairlearn>=0.12.0",
    "fastapi[all]>=0.116.1",
    "focal-loss-torch>=0.1.2",
    "httpx>=0.28.1",
    "imbalanced-learn>=0.13.0",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "nbformat>=5.10.4",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pip",
    "plotly>=6.2.0",
    "pyarrow>=20.0.0",
    "pyspark>=4.0.0",
    "python-dotenv",
    "requests>=2.32.4",
    "ruff",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "synapseml>=1.0.12",
    "torchvision>=0.22.1",
    "xgboost>=3.0.2",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["fraud_detection"]
include = ["pyproject.toml", "fraud_detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fraud_detection"]
force-sort-within-sections = true

